[gd_scene load_steps=4 format=3 uid="uid://m5g86rhs8e2a"]

[ext_resource type="Script" path="res://scripts/connected_user_row.gd" id="1_1ihn6"]
[ext_resource type="Texture2D" uid="uid://bswgm5ox7cisn" path="res://assets/images/button-adri.png" id="2_knufg"]
[ext_resource type="Texture2D" uid="uid://dlt1dq5i6814o" path="res://assets/images/button-jack.png" id="2_topgn"]

[node name="ConnectedUserRow" type="HBoxContainer"]
offset_right = 94.0
offset_bottom = 23.0
script = ExtResource("1_1ihn6")

[node name="Icon_Jack" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_topgn")
expand_mode = 3

[node name="Icon_Adri" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_knufg")
expand_mode = 2

[node name="NicknameLabel" type="Label" parent="."]
layout_mode = 2
theme_override_colors/font_color = Color(0.925353, 0.925353, 0.925353, 1)
theme_override_font_sizes/font_size = 0
text = "<nickname>"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 2
text = "<status>"

[node name="JoinButton" type="Button" parent="."]
layout_mode = 2
text = "Join"
